--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FUTA Market Store</title>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6716561559231902"
+     crossorigin="anonymous"></script>
+    
     <style>
         * { 
     margin: 0; 
@@ -1421,7 +1425,7 @@ tr:hover {
     <div class="nav-mobile">
         <div class="nav-left">
             <button id="hamburgerBtn" class="hamburger-btn">☰</button>
-            <h2 style="margin: 10; color: white;">🛍️ FUTA Market Store</h2>
+            <h2 style="margin: 30; color: white;">🛍️ FUTA Market Store</h2>
         </div>
         <div class="nav-right">
             <button onclick="showSection('register')">📝 Sign Up</button>
